Avoid logging very small values for Mojo.System.MessagesAcceptedPerEvent

BUG=685763
R=asvitkine@chromium.org

Review-Url: https://codereview.chromium.org/2649233010
Cr-Commit-Position: refs/heads/master@{#446488}

Former-commit-id: 883e1cd758c53676c99f61b5fc75ae11b1a0a1fb